Adicionando validação no método POST cadastrar

--- a/pom.xml
+++ b/pom.xml
@@ -22,17 +22,28 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 
-		<dependency>
+		<dependency> <!--Data JPA usado para mexer com dados -->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
 
-		<dependency>
+		<dependency> <!--Banco de dados h2 em memória -->
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
 		</dependency>
 
-		<dependency>
+		<dependency> <!--Usado para ativar o bean validation para fazer validações em métodos post-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
+		<dependency> <!--Usado para ativar o bean validation para fazer validações em métodos post-->
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+		</dependency>
+
+
+		<dependency> <!--Usado para nao precisar ficar dando run no programa a cada atualização-->
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 		</dependency>
